--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <div class="contact">
                                 <p>
                                     <span class="phone"><a href="#">Phone: +237653252154 / +237671923437</a></span>
-                                    <span class="email"><a href="#">Email: struglingwidows@yahoo.com</a></span>
+                                    <span class="email"><a href="#">Email: strugglingwidows@yahoo.com</a></span>
                                 </p>
                             </div>
                         </div>
@@ -91,6 +91,7 @@
                                     pastures in cities, some are really in critical health situation, and cannot
                                     even afford common drugs.
                                 </p>
+                                <h5 class="white-button"><a href="widowregistration.html">Widow Sign Up</a></h5>
                                 <h5 class="white-button"><a href="project.html">DONATE NOW</a></h5>
                             </div>
                         </div>
@@ -256,8 +257,7 @@
                             <h2><a href="#">Counseling</a></h2>
                             <p style="text-align: left;">
                                 With the COVID-19 outbreak, we extend counseling in the following:
-                                COVID-19 vaccination, eat lots of fruits and vegetables, limit excessive
-                                excessive consumption of sugar, increase in physical activities, limit alcohol intake.
+                                COVID-19 vaccination, eat lots of fruits and vegetables, limit excessive consumption of sugar, increase in physical activities, limit alcohol intake.
                             </p>
                         </div>
                     </div>
@@ -452,8 +452,7 @@
                                     <ul>
                                         <li><a href="#"><i class="fa fa-facebook"></i> Struggling Widows Foundation</a></li>
                                         <li><a href="#"><i class="fa fa-youtube"></i> Struggling Widows Foundation </a></li>
-                                        <li><a href="#"><i class="fa fa-whatsapp"></i> Struggling Widows Foundation</a></li>
-                                    </ul>
+                                       </ul>
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-3">
@@ -472,7 +471,7 @@
                                     <h3>CONTACT US</h3>
                                     <ul>
                                         <li><a href="#"><i class="fa fa-home"></i>Bamenda, Cameroon</a></li>
-                                        <li><a href="#"><i class="fa fa-envelope"></i>struglingwidows@yahoo.com</a></li>
+                                        <li><a href="#"><i class="fa fa-envelope"></i>strugglingwidows@yahoo.com</a></li>
                                         <li><a href="#"><i class="fa fa-phone"></i> +237 653 252 154</a></li>
                                         <li><a href="#"><i class="fa fa-phone"></i> +237  671 923 437</a></li>
                                     </ul>
