--- a/testimonial.html
+++ b/testimonial.html
@@ -35,7 +35,7 @@
                             <div class="contact">
                                 <p>
                                     <span class="phone"><a href="#">Phone: +237653252154 / +237671923437</a></span>
-                                    <span class="email"><a href="#">Email: struglingwidows@yahoo.com</a></span>
+                                    <span class="email"><a href="#">Email: strugglingwidows@yahoo.com</a></span>
                                 </p>
                             </div>
                         </div>
@@ -170,7 +170,6 @@
                                     <ul>
                                         <li><a href="#"><i class="fa fa-facebook"></i> Struggling Widows Foundation</a></li>
                                         <li><a href="#"><i class="fa fa-youtube"></i> Struggling Widows Foundation </a></li>
-                                        <li><a href="#"><i class="fa fa-whatsapp"></i> Struggling Widows Foundation</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -190,7 +189,7 @@
                                     <h3>CONTACT US</h3>
                                     <ul>
                                         <li><a href="#"><i class="fa fa-home"></i>Bamenda, Cameroon</a></li>
-                                        <li><a href="#"><i class="fa fa-envelope"></i>struglingwidows@yahoo.com</a></li>
+                                        <li><a href="#"><i class="fa fa-envelope"></i>strugglingwidows@yahoo.com</a></li>
                                         <li><a href="#"><i class="fa fa-phone"></i> +237 653 252 154</a></li>
                                         <li><a href="#"><i class="fa fa-phone"></i> +237  671 923 437</a></li>
                                     </ul>
